# amplitudes

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
docs/: api.md  index.md  usage.md
src/amplitudes/: __init__.py  api.py  bcfw.py  bcfw_quark.py  bg_bicurrent.py  bg_currents.py  bg_dy.py  bg_fermion.py  bg_two_quark_lines.py  cli.py  color.py  color_interference.py  color_internal_radiation.py  color_numeric_su3.py  color_quark.py  color_tensornet.py  color_two_exchange.py  color_two_exchange_numeric.py  color_two_exchange_tensornet.py  crossing.py  diagram_generator.py  helas.py  kinematics.py  lorentz.py  me.py  me_quark.py  model.py  parke_taylor.py  particles.py  phasespace.py  phasespace_massive.py  polarization.py  process.py  process_two_lines.py  process_two_lines_exchange.py  process_two_lines_full.py  process_two_lines_internal.py  sm.py  (+8 more)
src/amplitudes.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_bg_fermion_vs_bcfw.py  test_color_interference.py  test_color_internal_radiation_smoke.py  test_color_matrix_symmetry.py  test_color_qqbar.py  test_color_tensornet_fierz.py  test_crossing.py  test_diagnostics_logging.py  test_exchange_point_reduces.py  test_full_engine_reduces_exchange.py  test_helas_qed.py  test_internal_bicurrent_exact_color_smoke.py  test_internal_bicurrent_smoke.py  test_polarization_massive.py  test_process_spec.py  test_pt_vs_bcfw.py  test_public_api_exports.py  test_quark_3pt.py  test_sm.py  test_symbolic_schouten.py  test_tree_engine_smoke.py  test_two_exchange_smoke.py  test_two_line_assembler_smoke.py  test_validate_qqp_scattering.py  test_validation_harness_presence.py  test_vectorized_gauge_contractions.py
(+6 files in other folders)
